# Master-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ETHICS.md  README.md  README_EN.md  SECURITY.md  SKILL.md  gemini-extension.json  package.json  pytest.ini  requirements.txt  routing.json  skill-catalog.json
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
desktop/: Cargo.toml
desktop/src/: app.rs  baseline.rs  catalog.rs  cli.rs  fonts.rs  layout.rs  lib.rs  main.rs  model.rs  theme.rs  trace.rs
desktop/tests/: baseline_cli.rs  cli_client.rs  model_json.rs
docs/: PRD.md  fojin-runtime-contract.md  persona-schema.md  v1-framework-roadmap.md
hooks/: run-hook.cmd  session-start
prompts/: doctrine_reviewer.md  intake.md  rag_instructions.md  sutra_analyzer.md  teaching_builder.md  voice_analyzer.md  voice_builder.md
references/: README.md  ethics-runtime.md  source-conventions.md  teaching-modes.md  traditions.md  workflow-details.md
scripts/: _masterpaths.py  check-manifest-versions.py  cite.py  query.py  select-fidelity-smoke.py  test-fidelity.py  validate-citation-contract.py  validate-cross-critique.py  validate-curriculum-sources.py  validate-fidelity.py  validate-lore-triggers-content.py  validate-persona-fidelity.py  validate-promptfoo-configs.py  validate-routing.py  validate.py  verify_citations.py
tests/: cli.test.mjs  conftest.py  test_fidelity_exit.py  test_generator_cli.py  test_master_builder.py  test_master_paths.py  test_rag_query.py  test_requirements.py  (+5 more)
(+175 files in other folders)
