[package]
name = "master-skill-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "master_skill_desktop"
path = "src/lib.rs"

[[bin]]
name = "master-skill-desktop"
path = "src/main.rs"

[dependencies]
anyhow = "1"
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
